# fastapi_minio_fileshare

./: README.md  pyproject.toml
minio_fastapi/: app.py  minio_handler.py
